sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:16: error: type mismatch;
 found   : Unit
 required: Boolean
}while(x=true)
        ^